generally just made it better